# text-translator-rust

./: .env.development  .env.production  .gitignore  Cargo.toml  README.md
docker-compose/: docker-compose.yaml
docker-compose/assets/: iso639.json
docker-compose/config/: development.toml
src/modules/llm_client/: mod.rs  models.rs
src/modules/llm_client/openai/: mod.rs
src/server/: errors.rs  mod.rs  swagger.rs
src/server/router/: llm_client.rs  mod.rs  models.rs
