[package]
name = "text_translator_rust"
version = "1.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
anyhow = "1.0.100"
config = "0.15.18"
derive_builder = "0.20.2"
dotenv = "0.15.0"
metrics-exporter-prometheus = "0.17.2"
axum-prometheus = "0.9.0"
axum-tracing-opentelemetry = "0.32.2"
thiserror = "2.0.17"
serde_json = "1.0.145"
getset = "0.1.6"
tracing = "0.1"
serde_derive = "1.0.228"
regex = "1.12.2"
tracing-loki = "0.2.6"
tracing-subscriber = "0.3.20"
console-subscriber = "0.5.0"
base64 = "0.22.1"
tokio-util = "0.7.17"

[dependencies.async-openai]
version = "0.30.1"
features = ["byot"]

[dependencies.chrono]
version = "0.4.42"
features = ["serde"]

[dependencies.tokio]
version = "1.45.1"
features = ["full"]

[dependencies.tower-http]
version = "0.6.5"
features = ["trace", "cors"]

[dependencies.utoipa]
version = "5.4.0"
features = ["axum_extras", "chrono"]

[dependencies.isolang]
version = "2.0"
features = ["english_names"]

[dependencies.utoipa-swagger-ui]
version = "9"
features = ["axum"] 

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4", 
    "serde"
]


[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.axum]
version = "0.8.6"
features = ["ws"]

[dependencies.reqwest]
version = "0.12.24"
features = ["json"] 




